# lab04-solid-alpha

./: CMakeLists.txt  Digital.cpp  Digital.h  Game.cpp  Game.h  ICalculusDiscount.cpp  ICalculusDiscount.h  ICalculusTax.cpp  ICalculusTax.h  IEspecificationsDiscountClass.cpp  IEspecificationsDiscountClass.h  IPrint.cpp  IPrint.h  ISave.cpp  ISave.h  Main.cpp  MainProduct.cpp  Movie.cpp  Movie.h  Physical.cpp  Physical.h  Print.cpp  Print.h  Product.h  Producto.h  README.md  Recive.cpp  Recive.h  Save.cpp  Save.h  Streaming.cpp  Streaming.h
Diagram/: UML v2.00.uxf
