cmake_minimum_required(VERSION 3.14)
project(lab04-solid)

set(CMAKE_CXX_STANDARD 17)
add_executable(Game.h Game.cpp Main.cpp Product.h Movie.h Movie.cpp  ICalculusDiscount.h ICalculusDiscount.cpp ICalculusTax.h ICalculusTax.cpp Digital.h Digital.cpp Physical.h Physical.cpp Streaming.h Streaming.cpp Recive.h Recive.cpp IEspecificationsDiscountClass.h IEspecificationsDiscountClass.cpp IEspecificationsDiscountClass.cpp)