cmake_minimum_required(VERSION 3.14)
project(lab04-solid)

set(CMAKE_CXX_STANDARD 17)
add_executable(Digital.h Digital.cpp Game.h Game.cpp ICalculusDiscount.h ICalculusDiscount.cpp ICalculusTax.h ICalculusTax.cpp IEspecificationsDiscountClass.cpp IEspecificationsDiscountClass.h Main.cpp Movie.h Movie.cpp Physical.h Physical.cpp Product.h Recive.h Recive.cpp Streaming.h Streaming.cpp)