cmake_minimum_required(VERSION 3.14)
project(lab4-solid)

set(CMAKE_CXX_STANDARD 17)
add_executable(lab4-solid Digital.h Digital.cpp Game.h Game.cpp ICalculusDiscount.h ICalculusDiscount.cpp ICalculusTax.h ICalculusTax.cpp IEspecificationsDiscountClass.cpp IEspecificationsDiscountClass.h Main.cpp Physical.h Physical.cpp Product.h Recive.h Recive.cpp Streaming.h Streaming.cpp IPrint.h IPrint.cpp ISave.h ISave.cpp Print.cpp Print.h Save.h Save.cpp)